[metadata]
name = chess_api
version = 0.0.1
author = JeniaD
author_email = jeniadeshchenko@gmail.com
description = Package for chess bots
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JeniaD/chess-api
project_urls =
    Bug Tracker = https://github.com/JeniaD/chess-api/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires = 
    chess==1.8.0
